Bug 394279 - "nsRect::Contains() should always succeed if the parameter rect is empty" [p=bugspam.Callek@gmail.com (Justin Wood [Callek]) r+sr=roc a1.9=mconnor]